Added Authorization for users using OAuth
