# sasharitycakes-api/routes/ordersRoute.js
@@ -4,7 +4,7 @@ const express = require("express");
 const router = express.Router();
 const controller = require("../controllers/ordersController");
 const { validateOrder } = require("../middleware/validate");
-
+const isAuthenticated = require("../middleware/authenticate")
 /**
  * #swagger.tags = ['Orders']
  * #swagger.basePath = '/orders'
@@ -12,30 +12,56 @@ const { validateOrder } = require("../middleware/validate");
 
 
 // GET ALL ORDERS
-router.get("/orders", controller.getAll);
-/* 
-  #swagger.summary = 'Get all orders'
-*/
+router.get("/orders", (req, res) => {
+  /* #swagger.tags = ['Orders'] 
+    #swagger.summary = 'Get all orders'
+  */
+  
+  controller.getAll(req, res);
+});
+
 
 // GET SINGLE ORDER
-router.get("/orders/:id", controller.getSingle);
-/* 
-  #swagger.summary = 'Get a single order by ID'
-*/
+router.get("/orders/:id", (req, res) => {
+  /* #swagger.tags = ['Orders'] 
+    #swagger.summary = 'Get a order by Id'
+  */
+  
+  controller.getSingle(req, res);
+});
 
 // CREATE ORDER
-router.post("/orders", validateOrder, controller.createOrder);
+router.post("/orders", isAuthenticated, validateOrder, (req, res) => {
+  /* 
+  #swagger.tags = ['Orders']
+  #swagger.summary = 'Create an order'
+  #swagger.security = [{ "githubAuth": [] }]
+*/
+  controller.createOrder(req, res)
+});
+
 
 // UPDATE ORDER
-router.put("/orders/:id", validateOrder, controller.updateOrder);
-/* 
+router.put("/orders/:id", isAuthenticated, validateOrder, (req, res) => {
+  /* 
+  #swagger.tags = ['Orders']
   #swagger.summary = 'Update an order'
+  #swagger.security = [{ "githubAuth": [] }]
 */
+  controller.updateOrder(req, res)
+});
+
 
 // DELETE ORDER
-router.delete("/orders/:id", controller.deleteOrder);
-/* 
+router.delete("/orders/:id", isAuthenticated, (req, res) => {
+  /* 
+  #swagger.tags = ['Orders']
   #swagger.summary = 'Delete an order'
+  #swagger.security = [{ "githubAuth": [] }]
 */
+  controller.deleteOrder(req, res)
+});
+
+
 
 module.exports = router;
