# sasharitycakes-api/swagger.js
@@ -8,13 +8,22 @@ const doc = {
     host: "sasharitycakes-api.onrender.com",
     schemes: ["https"],
     
+    components: {
+    securitySchemes: {
+      githubAuth: {
+        type: "oauth2",
+        
+      }
+    }
+  }
 };
 
 const outputFile = "./swagger-output.json";
 
 const endpointsFiles = [
   "./routes/ordersRoute.js",
-  "./routes/productsRoute.js"
+  "./routes/productsRoute.js", 
+  "./routes/authRoute.js"
 ];
 
 swaggerAutogen(outputFile, endpointsFiles, doc);
